2008-09-01  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokeravatar.py.in
	(PokerAvatarTestCase.playWhileObserverGrows): Wrote method.
	(PokerAvatarTestCase.test74_tooManyPacketsGrowOnObserver): Created
	test.

2008-08-31  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokeravatar.py.in
	(PokerAvatarTestCase.playWhilePlayerDisconnectsAndRejoin): Wrote
	helper function.
	(PokerAvatarTestCase.test73_packetReplayFromRelogin): Wrote test.

2008-08-30  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokerservice.py.in
	(BreakTestCase.tourneyNewState_tourneyResumeAndDeal): split
	from test_tourneyNewState() and reworked to handle reactor call.
	(BreakTestCase.test02_tourneyNewState_tourneyResumeAndDeal_nowait):
	Wrote test.
	(BreakTestCase.test03_tourneyNewState_tourneyResumeAndDeal_withWait):
	Wrote test.
	(BreakTestCase.tourneyNewState_tourneyStart): Wrote method, based
	on tourneyNewState_tourneyResumeAndDeal.
	(BreakTestCase.test04_tourneyNewState_tourneyStart_nowait): Wrote test.
	(BreakTestCase.test05_tourneyNewState_tourneyStart_withWait):
	Wrote test.
	(BreakTestCase.tourneyFinish): Wrote method.
	(BreakTestCase.test06_tourneyFinish_nowait): Wrote test.
	(BreakTestCase.test07_tourneyFinish_withWait): Wrote test.
	(PokerServiceTestCase.test00_5_configValues): Wrote test.
	(PokerServiceTestCase.configValues): Added checks on self.service.delays
	(BreakTestCase.tourneyFinish): Moved db restore to before deferred return.
	(BreakTestCase.tourneyNewState_tourneyStart): Moved db restore to
	before deferred return.
	(BreakTestCase.tourneyNewState_tourneyResumeAndDeal): Moved db
	restore to before deferred return.

2008-08-28  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokerservice.py.in
	(BreakTestCase.test01_tourneyNewState_noCallbacksNeeded): split
	test_tourneyNewState().

2008-08-27  Bradley M. Kuhn  <bkuhn@ebb.org>

	* pokernetwork/pokerservice.py (PokerService.tourneyNewState):
	Added check and delay for extra_wait_tourney_break